--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,6 @@
     <string name="rechercher_avec_la_position">rechercher avec la position</string>
     <string name="recherche_tablissement">Recherche Établissement</string>
     <string name="veuillez_remplir_les_champs">Veuillez remplir les champs</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
